kubernetes_practice/2_namespaces/flask-deployment-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-api
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - name: flask
        image: asia-east1-docker.pkg.dev/dataops-317513/tt/flask
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: dev
spec:
  selector:
    app: flask
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  type: ClusterIP
